# llm-batch

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
src/batch_cli/: cli.py
src/batch_cli/models/: schemas.py
src/batch_cli/pipelines/: inference.py  post.py  pre.py
src/batch_cli/services/: openai_service.py
src/batch_cli/utils/: general.py  messages.py
tests/: test_version.py
tests/pipelines/: test_inference.py  test_post.py  test_pre.py
tests/utils/: test_general.py  test_images.py  test_messages.py
